# python-personal-style

./: .gitignore  LICENSE  README.md  README.org  manifest
.claude/: settings.json
exercises/: LEDGER.org
exercises/multi-file/: FINDINGS.org
exercises/multi-file/001-bookmarks/: README.org  pyproject.toml
exercises/multi-file/001-bookmarks/src/bookmarks/: __init__.py  _record.py  api.py  config.py  db.py  logging.py  main.py
exercises/multi-file/001-bookmarks/tests/integration/: test_api.py
exercises/multi-file/001-bookmarks/tests/unit/: test_db.py
exercises/single-file/: FINDINGS.org
exercises/single-file/001-parse-users/: README.org  pyproject.toml
exercises/single-file/001-parse-users/src/: parse_users.py
exercises/single-file/001-parse-users/tests/: test_parse_users.py
exercises/single-file/001-parse-users/tests/integration/: test_cli.py
exercises/single-file/001-parse-users/tests/unit/: test_parsing.py
exercises/snippets/: 001-greet.py  002-find-first.py  003-point.py  004-shapes.py  005-imports.py  006-parse-user.py  007-test-parse-user.py  FINDINGS.org
