[build-system]
requires = ['uv_build>=0.5.15,<0.6.0']
build-backend = 'uv_build'

[project]
name = 'bookmarks'
version = '0.1.0'
description = 'Minimal FastAPI bookmarks service with SQLite.'
requires-python = '>=3.14'
dependencies = [
    'fastapi>=0.115',
    'uvicorn[standard]>=0.30',
    'pydantic>=2.8',
    'pydantic-settings>=2.5',
    'structlog>=24.0',
]

[project.scripts]
bookmarks = 'bookmarks.main:main'

[dependency-groups]
dev = [
    'pytest>=8.0',
    'hypothesis>=6.100',
    'ruff>=0.8',
    'httpx>=0.27',
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
case-sensitive = true
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = true
section-order = ['standard-library', 'third-party', 'local-folder', 'first-party']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']
