[build-system]
requires = ['uv_build>=0.5.15,<0.6.0']
build-backend = 'uv_build'

[project]
name = 'parse-users'
version = '0.1.0'
description = 'Validate a file of name,email records and emit JSON.'
requires-python = '>=3.14'
dependencies = [
    'structlog>=24.0',
]

[project.scripts]
parse-users = 'parse_users:main'

[dependency-groups]
dev = [
    'pytest>=8.0',
    'hypothesis>=6.100',
    'ruff>=0.8',
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
case-sensitive = true
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = true
section-order = ['standard-library', 'third-party', 'local-folder', 'first-party']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']
